# LandingSpotIdentification

./: CMakeLists.txt  README.md  clipbot.cpp  networkclient.cpp  networkclient.h  plane_detection.cpp  plane_detection.h  videostabKalmanLANDINGPlanes REVERSE FROM DEPTH IMAGE.cpp  videostabKalmanLANDINGPlanes.cpp
